--- a/views/bad.jade
+++ b/views/bad.jade
@@ -1,2 +1,5 @@
-h1 Den email du angav är inte godkänd.
-p antingen angav du fel mail eller så måste du anmäla dig till it-ansvarig.
+extends layout
+
+block content
+    h1 Den email du angav är inte godkänd.
+    p antingen angav du fel mail eller så måste du anmäla dig till it-ansvarig.
