--- a/views/index.jade
+++ b/views/index.jade
@@ -3,13 +3,16 @@ extends layout
 block content
   h1 Välkommen till I-voter
   script(src='/javascripts/index.js', type="text/javascript")
-  p= email
-  form(id="vote" action="/vote", method="post")
-    label(for="option") Välj ditt alternativ
-    br
-    select(name="option")
-        - each option in options
-          option(value=option.value)= option.text
-    br
+  p.you= "Inloggad som: " + email
+  if options
+      form(id="vote" action="/vote", method="post")
+        label.enter-label(for="option") Välj ditt alternativ
+        br
+        select.form-control.enter(name="option")
+            - each option, index in options
+              option(value=index)= option.text
+        br
 
-    input(type="submit", value="Rösta")
+        input.btn.btn-success.vote-btn(type="submit", value="Rösta")
+  else
+    p Väntar på omröstning..
