--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,8 @@ html
     script(src='/socket.io/socket.io.js',type="text/javascript")
     script(src='/javascripts/jquery-2.2.0.min.js', type="text/javascript")
     title= title
-    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css')
+    link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    block content
+    .container
+        block content
