--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,7 @@ html
   head
     script(src='/socket.io/socket.io.js',type="text/javascript")
     script(src='/javascripts/jquery-2.2.0.min.js', type="text/javascript")
+    script(src='/javascripts/js.cookie.js', type="text/javascript")
     title= title
     link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
