--- a/views/index.jade
+++ b/views/index.jade
@@ -13,6 +13,6 @@ block content
                     option(value=index)= option.text
             br
 
-        .btn.btn-success.vote-btn Rösta
+        a.btn.btn-success.vote-btn Rösta
     .wait(class=options = (options && canVote) ? "hidden" : "")
         h1 Väntar på omröstning..
