--- a/views/here.jade
+++ b/views/here.jade
@@ -4,7 +4,9 @@ block content
     script(src="/javascripts/underscore-min.js", type="text/javascript")
     script(src="/javascripts/fuse.min.js", type="text/javascript")
     script(src="/javascripts/here.js", type="text/javascript")
-    h1 Användare här
+    div
+        h1(style="float:left") Användare här
+        a.btn.btn-primary(href="/admin", style="float:right") Till adminsida
     input.search.form-control(placeholder="Sök..")
     table.table.table-striped
         tr
